# VT-Physics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap-vtphysics.bat  bootstrap-vtphysics.sh  dependencies.txt
ConfigTemplates/: ExportConfigTemplate.json  PBFConfigTemplate.json  ParticleBoxConfigTemplate.json  ParticleCommonConfigTemplate.json  ParticleCubeConfigTemplate.json  ParticleCylinderConfigTemplate.json  ParticlePlaneConfigTemplate.json  ParticleSphereConfigTemplate.json
ConfigTemplates/DFSPHSolver/: DFSPHSolverConfigTemplate.json  DFSPHSolverObjectComponentConfigTemplate.json
ConfigTemplates/IMMCTSolver/: IMMCTSolverConfigTemplate.json  IMMCTSolverObjectComponentConfigTemplate.json
ConfigTemplates/IMMSolver/: IMMSolverConfigTemplate.json  IMMSolverObjectComponentConfigTemplate.json
ConfigTemplates/MCTSolver/: MCTSolverConfigTemplate.json  MCTSolverObjectComponentConfigTemplate.json
ConfigTemplates/ObjectConfig/: ParticleBoxConfigTemplate.json  ParticleCommonConfigTemplate.json  ParticleCubeConfigTemplate.json  ParticleCylinderConfigTemplate.json  ParticleEmitterConfigTemplate.json  ParticlePlaneConfigTemplate.json  ParticleSphereConfigTemplate.json
ConfigTemplates/PBFSolver/: PBFSolverConfigTemplate.json  PBFSolverObjectComponentConfigTemplate.json
ConfigTemplates/UGNS/: UGNSConfigTemplate.json
Examples/: CMakeLists.txt
Examples/DFSPH/: CMakeLists.txt  Usage-1.cpp  Usage-2.cpp
Examples/DFSPH/Scene-1/: Configuration.json
Examples/IMM/: CMakeLists.txt  Usage-1.cpp  Usage-2.cpp
Examples/IMM/Scene-1/: Configuration.json
Examples/IMMCT/: CMakeLists.txt  Usage-1.cpp  Usage-2.cpp
Examples/IMMCT/Scene-1/: Configuration.json
Examples/MCT/: CMakeLists.txt  Usage-1.cpp  Usage-2.cpp
Examples/MCT/Scene-1/: Configuration.json
Examples/PBF/: CMakeLists.txt  Usage-1.cpp  Usage-2.cpp
Examples/PBF/Scene-1/: Configuration.json
Examples/ParticleEmitter/: CMakeLists.txt  Usage-1.cpp
Examples/ParticleEmitter/Scene-1/: Configuration.json
Examples/pbf_test/: CMakeLists.txt  pbf_main.cpp
Simulator/: CMakeLists.txt
Simulator/CommandLineTool/: CMakeLists.txt  SimulatorCMD.cpp
Simulator/Config/: RealPath.hpp.in
Simulator/Runtime/: CMakeLists.txt
Simulator/Runtime/Include/Core/Math/: DataStructTransfer.hpp  Matrix.hpp
Simulator/Runtime/Include/Framework/: Material.hpp  Object.hpp  ObjectComponents.hpp  Solver.hpp
Simulator/Runtime/Include/Manager/: ObjectManager.hpp  Simulator.hpp  SolverManager.hpp
Simulator/Runtime/Include/Modules/NeighborSearch/UGNS/: README.md  UniformGridNeighborSearch.hpp
Simulator/Runtime/Include/Modules/SPH/: KernelFunctions.cuh
Simulator/Runtime/Include/Solvers/DFSPH/: DFSPHSolver.hpp  DFSPHrtData.hpp  README.md
Simulator/Runtime/Include/Solvers/IMM/: IMMSolver.hpp  IMMrtData.hpp  README.md
Simulator/Runtime/Include/Solvers/IMM-CT/: IMMCTSolver.hpp  IMMCTrtData.hpp
Simulator/Runtime/Include/Solvers/MCT/: MCTSolver.hpp  MCTrtData.hpp  README.md
Simulator/Runtime/Include/Solvers/PBF/: PBFConfigTemplate.json  PBFSolver.hpp  PBFrtData.hpp  README.md
Simulator/Runtime/Source/: CMakeLists.txt
Simulator/Runtime/Source/Framework/: CMakeLists.txt  Object.cpp  ObjectComponents.cpp  Solver.cpp
Simulator/Runtime/Source/Manager/: CMakeLists.txt  ObjectManager.cpp  Simulator.cpp  SolverManager.cpp
Simulator/Runtime/Source/Modules/: CMakeLists.txt
Simulator/Runtime/Source/Modules/NeighborSearch/: CMakeLists.txt
Simulator/Runtime/Source/Modules/NeighborSearch/UGNS/: CMakeLists.txt  UGNSCudaApi.cuh  UGNSCudaImpl.cu  UniformGridNeighborSearch.cpp
Simulator/Runtime/Source/Solvers/: CMakeLists.txt
Simulator/Runtime/Source/Solvers/DFSPH/: CMakeLists.txt  DFSPHCudaApi.cuh  DFSPHCudaImpl.cu  DFSPHSolver.cpp
Simulator/Runtime/Source/Solvers/IMM/: CMakeLists.txt  IMMCudaApi.cuh  IMMCudaImpl.cu  IMMSolver.cpp
Simulator/Runtime/Source/Solvers/IMM-CT/: CMakeLists.txt  IMMCTCudaApi.cuh  IMMCTCudaImpl.cu  IMMCTSolver.cpp
Simulator/Runtime/Source/Solvers/MCT/: CMakeLists.txt  MCTCudaApi.cuh  MCTCudaImpl.cu  MCTSolver.cpp
Simulator/Runtime/Source/Solvers/PBF/: CMakeLists.txt  PBFCudaApi.cuh  PBFCudaImpl.cu  PBFSolver.cpp
Simulator/Templates/Include/UtilTemlates/: Singleton.hpp
