CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

SET(VCPKG_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/Simulator/Thirdparty/vcpkg)
SET(CMAKE_TOOLCHAIN_FILE ${VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake CACHE FILEPATH "" FORCE)

PROJECT(VT-Physics)

ENABLE_LANGUAGE(CXX CUDA)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_C_STANDARD 20)
SET(CMAKE_CUDA_ARCHITECTURES 80)

FIND_PACKAGE(OpenMP REQUIRED)
IF (OpenMP_CXX_FOUND)
    ADD_DEFINITIONS(-DVANT_TURN_ON_OMP)
    IF (MSVC)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /openmp")
    ELSE ()
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    ENDIF ()
ENDIF ()

#===================================== Build Components.
ADD_SUBDIRECTORY(Engine)