PROJECT(VP-Manager)

FIND_PACKAGE(spdlog CONFIG REQUIRED)

FILE(GLOB_RECURSE RUNTIME_MANAGER_HEADER_FILES
        ${VP_RUNTIME_ROOT}/Include/Manager/*.hpp
)
FILE(GLOB_RECURSE RUNTIME_MANAGER_SRC_FILES
        *.cpp
)

SET(DEPENDENCY_LIBS
        vpcore
        vppbf
        vpdfsph
        vpimm
        vpimmct
        vpmct
)

ADD_LIBRARY(vpmanager STATIC ${RUNTIME_MANAGER_HEADER_FILES} ${RUNTIME_MANAGER_SRC_FILES})
TARGET_LINK_LIBRARIES(vpmanager PUBLIC ${DEPENDENCY_LIBS})
TARGET_LINK_LIBRARIES(vpmanager PRIVATE vplogger)
ADD_DEPENDENCIES(vpmanager ${DEPENDENCY_LIBS})
